# fbpyutils-finance

./: .coveragerc  .gitignore  DOC.md  DOCSTRINGS_TODO.md  Makefile  Pipfile  README.md  TODO.md  pyproject.toml  setup.py
fbpyutils_finance/: __init__.py  app.json  assessment.py  calculators.py  utils.py
fbpyutils_finance/bing/: __init__.py
fbpyutils_finance/bovespa/: __init__.py  tabelas_anexas_bovespa.xlsx
fbpyutils_finance/cei/: __init__.py
fbpyutils_finance/certificates/: bvmf-bmfbovespa-com-br.pem
fbpyutils_finance/cvm/: __init__.py  __obsolete.py  client.py  converters.py  cvm_client.py  file_io.py  headers.py  processing.py  remote.py  utils.py
fbpyutils_finance/google/: __init__.py
fbpyutils_finance/investidor10/: __init__.py  constants.py  ifix.py  indicators.py  payments.py  ranking.py  utils.py
fbpyutils_finance/tesourodireto/: __init__.py
fbpyutils_finance/yahoo/: __init__.py
tests/: cvm_catalog_updates.sql  fbpyutils_finance.ipynb  fbpyutils_finance_cvm.ipynb  test_fbpyutils_finance_init.py  test_fbpyutils_finance_investment.py  test_fbpyutils_finance_rates.py  test_fbpyutils_finance_stock.py  test_fbpyutils_finance_utils.py  test_provider_bovespa.py  test_yahoo_stock_provider.py
tests/bing/: test_bing_stock_price.py
tests/bovespa/: test_bovespa_build_paths.py  test_bovespa_check_local_history.py  test_bovespa_get_info_tables.py  test_bovespa_get_stock_history.py  test_bovespa_stock_history_init.py  test_bovespa_treat_data.py  test_bovespa_validate_period_date.py
tests/cei/: test_cei_get_cei_data_basic.py  test_cei_get_cei_data_parallel.py  test_cei_process_operation_basic.py
tests/cvm/: test_cvm_client_core.py  test_cvm_converters_basic.py  test_cvm_file_io.py  test_cvm_processing.py  test_cvm_remote.py
tests/func/: test_sandbox_yahoo_integration.py
tests/google/: test_google_exchange_rate.py  test_google_stock_price.py
tests/investidor10/: test_ifix.py  test_indicators.py  test_integration.py  test_ranking.py
tests/tesourodireto/: test_tesourodireto_treasury_bonds.py
tests/yahoo/: test_yahoo_currency_provider.py  test_yahoo_helpers.py  test_yahoo_stock_price.py
(+30 files in other folders)
