[project]
name = "fbpyutils-finance"
version = "0.1.0"
description = "Francisco Bispo's utilities for Financial Operations"
authors = [
    { name = "Francisco C J Bispo", email = "fcjbispo@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mock>=5.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]
