[project]
name = "fbpyutils-finance"
version = "1.4.0"
description = "Francisco Bispo's utilities for Financial Operations"
authors = [
    { name = "Francisco C J Bispo", email = "fcjbispo@gmail.com" }
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "fbpyutils",
    "pytest-mock>=3.14.0",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mock>=5.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

[tool.uv.sources]
fbpyutils = { url = "https://github.com/fcjbispo/builds/raw/main/fbpyutils/fbpyutils-1.6.0-py3-none-any.whl" }
